* added asynchron functionality
